css/styles.css
/* ... */
nav #key.nav-toggle img {
  animation: key-jingle 0.38s linear alternate infinite;
  -webkit-animation: key-jingle 0.38s linear alternate infinite;
  
  transition: all 0.38s ease-in-out;
}

nav #key img:hover {
  animation: key-hover 7.77s linear infinite;
  -webkit-animation: key-hover 7.77s linear infinite;
  transform: scale(1.1);
} 

nav #key.nav-toggle.open img {
  animation: key 0.8s linear alternate forwards;
  -webkit-animation: key 0.8s linear alternate forwards;
}

nav.is-pinned #key img {
  opacity: 0.7;
  transition: opacity 0.38s ease-in;

  animation: none;
} 

nav.is-pinned #key img:hover {
  opacity: 1;
  animation: key-jingle 0.38s linear alternate infinite;
  -webkit-animation: key-jingle 0.38s linear alternate infinite;

} 

nav.is-pinned #key.nav-toggle.open img {
  opacity: 1;
  animation: key 0.8s linear alternate forwards;
  -webkit-animation: key 0.8s linear alternate forwards;
}

/* keyAnimation */
nav .nav-toggle.open img {
  animation: key 0.8s linear alternate forwards;
  -webkit-animation: key 0.8s linear alternate forwards;
}

nav #nav-ul-wrapper {
  position: absolute;
  top: 88px;
  right: 0;
  
  opacity: 0;
  visibility: hidden;
  
  transition: all 0.38s 0.28s ease-in-out;
}

nav .nav-toggle.open ~ #nav-ul-wrapper {
  opacity: 1;
  visibility: visible;
}

nav #nav-ul-wrapper ul {
  display: grid;
  justify-items: end;
  gap: 18px;
  
  border: 3px ridge var(--clr-bg-creamy);
  border-top-left-radius: 111px;
  border-bottom-right-radius: 33px;
  border-bottom-left-radius: 33px;
  list-style-type: none;
  padding: 11px 0 11px 11px;
}

nav #nav-ul-wrapper ul::before {
  content: '';

  position: absolute;
  inset: 0;
  
  background: linear-gradient(to bottom right, red, green, blue);
  border-top-left-radius: 111px;
  border-bottom-left-radius: 33px;
  border-bottom-right-radius: 33px;
  opacity: 18%;
} 

nav #nav-ul-wrapper ul::after {
  position: absolute;
  inset: 0;

  content:'';

  border-top-left-radius: 111px;
  border-bottom-right-radius: 33px;
  border-bottom-left-radius: 33px;
  box-shadow: 0 0 33px var(--clr-body-accent-nature-green);
}

nav #nav-ul-wrapper a {
  position: relative;
  
  color: var(--clr-body-accent-nature-green);
  background-color: white;
  border-top-left-radius: 30px;
  border-bottom-left-radius: 30px;
  box-shadow:  0 0 8px var(--clr-body-accent-nature-green);
  font-family: var(--ff-nav);
  font-size: var(--fs-nav);
  letter-spacing: 1px;
  padding: 13px 18px;

  z-index: 1;
  transition: transform 100ms ease-in-out;
}

nav #nav-ul-wrapper a:hover {
  transform: rotateX(33deg);
}

nav #nav-ul-wrapper a::before {
  position: absolute;
  inset: 0;

  content: '';

  background: linear-gradient(to right, rgba(255, 0, 0, 0.333), rgba(0 , 255, 0, 0.333), rgba(0, 0, 255, 0.333));
  border-top-left-radius: 30px;
  border-bottom-left-radius: 30px;
  box-shadow: 0 0 8px 3px var(--clr-body-accent-nature-green);
  opacity: 30%;
}

nav #nav-ul-wrapper a:hover::before {
  opacity: 1;
}

nav #nav-ul-wrapper li:nth-of-type(4) a {
  border-bottom-right-radius: 18px;
}

nav #nav-ul-wrapper li:nth-of-type(4) a::before {
  border-bottom-right-radius: 18px;
}

#about {
  position: relative;
}

#about #avatar-container {
  display: grid;
  justify-content: center;
  
  border-radius: 50%;
  margin-bottom: 33px;
  overflow: hidden;
  padding: 0 55px;
}

#about #avatar-overflow-container {
  position: relative;
  
  border-radius: 50%;
  height: 100%;
  margin: 0 auto;
  overflow: hidden;
  width: 100%;

  transition: all 0.3s ease-in;
}

/* rgbCyclone360 */
#about #avatar-overflow-container::before {
  border: 2px solid red;
  position: absolute;
  inset: 0;

  content: '';

  background: linear-gradient(to bottom right, red, green, blue);
  height: 100%;
  opacity: 18%;
  overflow: hidden;
  width: 100%;

  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */

  animation: three-sixty 0.333s linear infinite; 
  -webkit-animation: three-sixty 0.333s linear infinite;
}

#about #avatar-overflow-container img {
  cursor: pointer;

  filter: sepia(1) brightness(0.7);
  transition: all 0.3s ease-in;
  border-radius: 50%;

  animation: avatar-cyclone 8s linear forwards;
  -webkit-animation: avatar-cyclone 8s linear forwards;
}

#about #avatar-overflow-container img:hover {
  filter: sepia(0) brightness(1) saturate(0.55);
}

#about #avatar-overflow-container img:active {
  animation: avatar-cyclone-active 0.8s ease-in forwards;
}

#about .emoji-eyes {
  display: inline-block;
  transform: scale(1.1);
  animation: emoji-eyes 3s linear infinite alternate;
}

#about #wave {
  display: inline-block;
  animation: wave 0.3s linear alternate infinite;
  -webkit-animation: wave 0.3s linear alternate infinite;
}

#about .nyc {
  font-family: bookman-jf-pro, serif;
  font-style: italic;
  word-spacing: 7px;
  font-feature-settings: unset;
}

#about .nyc-glyph {
  /* use the first available swash character (add 2 after to use the second) */
  font-feature-settings:"swsh";
}

#about .jkc-text {
  font-size: var(--fs-h3);
  font-weight: bold;
}

#about .cloud {
  display: inline-block;
  animation: cloud 0.5s linear alternate infinite;
  -webkit-animation: cloud 0.5s linear alternate infinite;
  

}

#about #stack {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
  width: min(500px, 100%);
  margin-inline:auto;
  padding-top: 33px;
}

#about .tech-icon {
  display: grid;
  text-align: center; 
}

#about .tech-icon:hover > i {
  animation: jiggle 333ms linear forwards;
  -webkit-animation: jiggle 333ms linear forwards;
}

#about .icon {
  font-size: 2.8rem;
}

#about .icon-name {
  font-size: var(--fs-icon-name);
  transition: transform 333ms ease-in;
}

#about .tech-icon:hover > .icon-name {
  transform: translateY(8px) scale(1.3);
}
/* ... */

